Fix Modal overflow & positioning. Profile selector animated

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,8 +1,9 @@
 .modal {
   --_offset-padding: 0.75rem;
+  --_offset-margin: clamp(1rem, 6vh, 10rem);
   position: absolute;
 
-  top: 20vh;
+  top: var(--_offset-margin);
 
   left: 0;
   right: 0;
@@ -12,7 +13,8 @@
   width: 100%;
   max-width: calc(1360px + var(--_offset-padding) * 2);
   min-height: 18.75rem;
-  padding: var(--_offset-padding);
+  padding-inline: var(--_offset-padding);
+  padding-block: var(--_offset-padding) var(--_offset-margin);
   outline: none;
 
   display: flex;
@@ -38,6 +40,7 @@
   inset: 0;
   background-color: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(3rem) contrast(1.25);
+  overflow-y: auto;
 
   opacity: 0;
   transition-property: opacity;
@@ -77,4 +80,22 @@
   pointer-events: none;
   box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.3);
   z-index: -1;
+}
+
+@media screen and (min-width: 1400px) {
+  .modal {
+    --_offset-margin: clamp(2rem, 10vh, 15rem);
+  }
+}
+
+@media screen and (min-width: 1800px) {
+  .modal {
+    --_offset-margin: clamp(3rem, 15vh, 20rem);
+  }
+}
+
+@media screen and (min-width: 2000px) {
+  .modal {
+    --_offset-margin: clamp(4rem, 20vh, 25rem);
+  }
 }
